--- a/PositionIn/NewsDetailsViewController/NewsDetailsViewController.xib
+++ b/PositionIn/NewsDetailsViewController/NewsDetailsViewController.xib
@@ -24,7 +24,7 @@
                     <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <color key="sectionIndexBackgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                 </tableView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Comment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qT7-aD-wZz">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write comment..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qT7-aD-wZz">
                     <rect key="frame" x="5" y="565" width="590" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="dBs-JE-5Dq"/>
