--- a/PositionIn/Attachments/MoreInformationCell/MoreInformationCell.xib
+++ b/PositionIn/Attachments/MoreInformationCell/MoreInformationCell.xib
@@ -3,18 +3,55 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="R0L-qZ-JmQ" customClass="MoreInformationCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="R0L-qZ-JmQ" customClass="MoreInformationCell" customModule="PositionIn" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="456" height="64"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R0L-qZ-JmQ" id="Rda-Je-uVB">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="456" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0UB-hm-BFt">
+                        <rect key="frame" x="4" y="4" width="56" height="56"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="56" id="nP4-BK-Y3J"/>
+                            <constraint firstAttribute="width" constant="56" id="uUI-1H-pge"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZX-Z8-ueq">
+                        <rect key="frame" x="72" y="8" width="376" height="21"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGh-fT-USE">
+                        <rect key="frame" x="72" y="35" width="376" height="15"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="13"/>
+                        <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="0UB-hm-BFt" firstAttribute="top" secondItem="Rda-Je-uVB" secondAttribute="top" constant="4" id="6ZF-5g-R4a"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="jZX-Z8-ueq" secondAttribute="trailing" id="C00-om-EFe"/>
+                    <constraint firstItem="jZX-Z8-ueq" firstAttribute="leading" secondItem="0UB-hm-BFt" secondAttribute="trailing" constant="12" id="DDK-b8-5V7"/>
+                    <constraint firstAttribute="topMargin" secondItem="jZX-Z8-ueq" secondAttribute="top" id="NhV-kM-GwX"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="eGh-fT-USE" secondAttribute="trailing" id="OtQ-oL-EbB"/>
+                    <constraint firstItem="eGh-fT-USE" firstAttribute="leading" secondItem="0UB-hm-BFt" secondAttribute="trailing" constant="12" id="T0Y-sK-J9N"/>
+                    <constraint firstItem="0UB-hm-BFt" firstAttribute="leading" secondItem="Rda-Je-uVB" secondAttribute="leading" constant="4" id="YNL-FT-YKL"/>
+                    <constraint firstItem="eGh-fT-USE" firstAttribute="top" secondItem="jZX-Z8-ueq" secondAttribute="bottom" constant="6" id="mXK-un-N0h"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="448" y="-141"/>
+            <connections>
+                <outlet property="descriptionImageView" destination="0UB-hm-BFt" id="4rb-U2-Y2c"/>
+                <outlet property="descriptionLabel" destination="eGh-fT-USE" id="md8-N6-18E"/>
+                <outlet property="titleLabel" destination="jZX-Z8-ueq" id="inS-x9-TMu"/>
+            </connections>
+            <point key="canvasLocation" x="516" y="-128"/>
         </tableViewCell>
     </objects>
 </document>
