--- a/PositionIn/FeedEmergencyDetailsViewController/FeedEmergencyDetailsViewController.xib
+++ b/PositionIn/FeedEmergencyDetailsViewController/FeedEmergencyDetailsViewController.xib
@@ -18,13 +18,13 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ycM-al-5wZ" customClass="TableView" customModule="PosInCore">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="VcS-ff-iTt"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ycM-al-5wZ" secondAttribute="trailing" id="UVs-ZU-jJy"/>
                 <constraint firstAttribute="bottom" secondItem="ycM-al-5wZ" secondAttribute="bottom" id="VrV-9W-xLQ"/>
