--- a/PositionIn/NewsDetailsViewController/Views/NewsItemTitleCell/PositionIn.NewsItemTitleCell.xib
+++ b/PositionIn/NewsDetailsViewController/Views/NewsItemTitleCell/PositionIn.NewsItemTitleCell.xib
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="127.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd4-3O-NDP">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel LabelLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd4-3O-NDP">
                         <rect key="frame" x="20" y="20" width="280" height="70"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
@@ -28,54 +30,57 @@
                             <constraint firstAttribute="height" constant="1" id="hS5-BX-iES"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tnH-7t-KTq">
-                        <rect key="frame" x="20" y="100" width="236" height="17"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kvR-0w-vHn">
-                        <rect key="frame" x="264" y="100" width="36" height="17"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
-                        <color key="textColor" red="0.92941176470588238" green="0.10588235294117647" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="productPinDistance" translatesAutoresizingMaskIntoConstraints="NO" id="qSW-nO-GXN">
-                        <rect key="frame" x="18" y="100" width="20" height="17"/>
-                        <color key="tintColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
-                    </imageView>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3q-0l-LsD">
-                        <rect key="frame" x="46" y="100" width="210" height="17"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5N-hU-ZgY" userLabel="BottomContainer">
+                        <rect key="frame" x="20" y="98" width="280" height="21"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="productPinDistance" translatesAutoresizingMaskIntoConstraints="NO" id="qSW-nO-GXN">
+                                <rect key="frame" x="0.0" y="2" width="20" height="17"/>
+                                <color key="tintColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3q-0l-LsD">
+                                <rect key="frame" x="28" y="2" width="208" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kvR-0w-vHn">
+                                <rect key="frame" x="244" y="2" width="36" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="0.92941176470588238" green="0.10588235294117647" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="y3q-0l-LsD" firstAttribute="leading" secondItem="qSW-nO-GXN" secondAttribute="trailing" constant="8" id="7as-y5-DHt"/>
+                            <constraint firstAttribute="bottom" secondItem="kvR-0w-vHn" secondAttribute="bottom" constant="2" id="OTX-yC-KcP"/>
+                            <constraint firstItem="kvR-0w-vHn" firstAttribute="top" secondItem="Z5N-hU-ZgY" secondAttribute="top" constant="2" id="OYJ-a5-TwN"/>
+                            <constraint firstAttribute="bottom" secondItem="qSW-nO-GXN" secondAttribute="bottom" constant="2" id="P9U-nq-3G9"/>
+                            <constraint firstAttribute="height" constant="21" id="QI8-Tu-PJJ"/>
+                            <constraint firstItem="kvR-0w-vHn" firstAttribute="leading" secondItem="y3q-0l-LsD" secondAttribute="trailing" constant="8" id="Zqg-cE-Xln"/>
+                            <constraint firstItem="y3q-0l-LsD" firstAttribute="bottom" secondItem="qSW-nO-GXN" secondAttribute="bottom" id="c7e-vf-lhb"/>
+                            <constraint firstItem="qSW-nO-GXN" firstAttribute="leading" secondItem="Z5N-hU-ZgY" secondAttribute="leading" id="e42-Xy-rhr"/>
+                            <constraint firstItem="y3q-0l-LsD" firstAttribute="firstBaseline" secondItem="kvR-0w-vHn" secondAttribute="baseline" id="p6A-3I-YXo"/>
+                            <constraint firstAttribute="trailing" secondItem="kvR-0w-vHn" secondAttribute="trailing" id="vIj-Em-ihU"/>
+                            <constraint firstItem="qSW-nO-GXN" firstAttribute="top" secondItem="Z5N-hU-ZgY" secondAttribute="top" constant="2" id="zv7-u0-gRe"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XcK-fF-xO2" firstAttribute="top" secondItem="qSW-nO-GXN" secondAttribute="bottom" constant="10" id="2Lq-9g-qNK"/>
                     <constraint firstAttribute="bottomMargin" secondItem="XcK-fF-xO2" secondAttribute="bottom" constant="-8" id="5it-rp-7nE"/>
-                    <constraint firstItem="tnH-7t-KTq" firstAttribute="top" secondItem="Xd4-3O-NDP" secondAttribute="bottom" constant="10" id="9lG-8b-7hP"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Z5N-hU-ZgY" secondAttribute="trailing" constant="12" id="Dgc-Ec-rVU"/>
                     <constraint firstItem="XcK-fF-xO2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="P1D-2g-qBd"/>
-                    <constraint firstItem="kvR-0w-vHn" firstAttribute="leading" secondItem="y3q-0l-LsD" secondAttribute="trailing" constant="8" id="PSp-cy-elJ"/>
-                    <constraint firstItem="XcK-fF-xO2" firstAttribute="top" secondItem="kvR-0w-vHn" secondAttribute="bottom" constant="10" id="Q0e-y0-gqA"/>
                     <constraint firstItem="Xd4-3O-NDP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Sbs-Pi-17m"/>
-                    <constraint firstItem="tnH-7t-KTq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Vzu-WY-E8b"/>
                     <constraint firstItem="Xd4-3O-NDP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="W44-Ib-X0w"/>
-                    <constraint firstItem="XcK-fF-xO2" firstAttribute="top" secondItem="y3q-0l-LsD" secondAttribute="bottom" constant="10" id="Y9h-cr-SKS"/>
+                    <constraint firstItem="Z5N-hU-ZgY" firstAttribute="top" secondItem="Xd4-3O-NDP" secondAttribute="bottom" constant="8" id="Ziw-Uf-pOo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Xd4-3O-NDP" secondAttribute="trailing" constant="12" id="alt-5f-hwE"/>
-                    <constraint firstItem="kvR-0w-vHn" firstAttribute="top" secondItem="Xd4-3O-NDP" secondAttribute="bottom" constant="10" id="cj2-4w-6qn"/>
-                    <constraint firstItem="qSW-nO-GXN" firstAttribute="top" secondItem="Xd4-3O-NDP" secondAttribute="bottom" constant="10" id="cle-Hn-Hh9"/>
-                    <constraint firstItem="y3q-0l-LsD" firstAttribute="top" secondItem="Xd4-3O-NDP" secondAttribute="bottom" constant="10" id="emh-Hd-YKO"/>
-                    <constraint firstItem="qSW-nO-GXN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="h9f-4T-tRt"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="kvR-0w-vHn" secondAttribute="trailing" constant="12" id="ixJ-9g-kIz"/>
-                    <constraint firstItem="kvR-0w-vHn" firstAttribute="leading" secondItem="tnH-7t-KTq" secondAttribute="trailing" constant="8" id="j88-bs-ev4"/>
-                    <constraint firstItem="y3q-0l-LsD" firstAttribute="leading" secondItem="qSW-nO-GXN" secondAttribute="trailing" constant="8" id="mvQ-0W-0Vk"/>
+                    <constraint firstItem="Z5N-hU-ZgY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="lmJ-09-GKD"/>
                     <constraint firstAttribute="trailingMargin" secondItem="XcK-fF-xO2" secondAttribute="trailing" constant="-8" id="n1f-0n-42m"/>
-                    <constraint firstItem="XcK-fF-xO2" firstAttribute="top" secondItem="tnH-7t-KTq" secondAttribute="bottom" constant="10" id="wXC-Qg-9JZ"/>
+                    <constraint firstItem="XcK-fF-xO2" firstAttribute="top" secondItem="Z5N-hU-ZgY" secondAttribute="bottom" constant="8" id="wuj-Vb-ouC"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="authorLabel" destination="tnH-7t-KTq" id="3RL-We-nAO"/>
+                <outlet property="bottomContainerHeightConstaint" destination="QI8-Tu-PJJ" id="97q-tf-fMe"/>
                 <outlet property="dateLabel" destination="kvR-0w-vHn" id="Zex-A5-P0B"/>
                 <outlet property="distanceIcon" destination="qSW-nO-GXN" id="xJX-ug-baq"/>
                 <outlet property="distanceLabel" destination="y3q-0l-LsD" id="EgF-D6-USe"/>
